--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -16,6 +16,15 @@ footer:
   - name: "Головна"
     url: "/"
     weight: 1
+  - name: "Послуги"
+    url: "/services/"
+    weight: 2
+  - name: "Питання"
+    url: "/FAQs/"
+    weight: 3
+  - name: "Про нас"
+    url: "/about-us/"
+    weight: 4
   - name: "Контакти"
     url: "/contact/"
-    weight: 2
+    weight: 5
